# flash_card_mlpro

./: .gitignore  README.md  main.py  pyproject.toml
src/: crud_cards.py  crud_theme.py  init_db.py  stats.py
