[project]
name = "flash-card-mlpro"
version = "0.1.0"
description = "Application de Flashcard"
authors = [
    {name = "GuillaumeKoessler",email = "guillaume.koessler@gmail.com"}
]
license = {text = "Apache License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
